# Nova_A

./: .gitignore  BUILD_GUIDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md  LICENSE.md  PROJECT_STRUCTURE.md  README.md  README.zh-CN.md  ROADMAP.md  package.json
Editor/: CMakeLists.txt  EditorApplication.cpp  EditorApplication.h  main.cpp
Engine/: CMakeLists.txt
Engine/Core/: Application.cpp  Application.h  Window.cpp  Window.h
Engine/Graphics/: Renderer.cpp  Renderer.h
Engine/Input/: Input.h
docs/: readme.txt
editor/: index.html  package.json
editor/src/: App.vue
editor/src-tauri/: Cargo.toml
editor/src/assets/: main.css
editor/src/components/: WorldCanvas.vue
editor/src/layout/: EditorLayout.vue  SideBar.vue  SideBars.vue  StatusBar.vue  TopBar.vue
editor/src/panels/: PhysicsPanel.vue  RendererPanel.vue  ScenePanel.vue
editor/src/store/: editor.ts  physics.ts
editor/src/styles/: main.css
editor/src/world/: BoxEntity.ts  Camera.ts  CircleEntity.ts  Entity.ts  Transform.ts  TriangleEntity.ts  World.ts  types.ts
nova_core/: Cargo.toml
nova_core/src/: lib.rs
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/assets/: main.css
src/components/: ActionBar.vue  ConfigPanel.vue  ContextMenu.vue  LayerBar.vue  SceneSideBar.vue  ToolBar.vue  WorldCanvas.vue
src/layout/: EditorLayout.vue  SideBar.vue  StatusBar.vue  TopBar.vue
src/panels/: RendererPanel.vue  ScenePanel.vue  SettingsPanel.vue
src/store/: editor.ts  physics.ts
src/world/: BoxEntity.ts  Camera.ts  CircleEntity.ts  Entity.ts  TriangleEntity.ts  World.ts
